complete add sv

--- a/QuanLySinhVien/app/src/main/res/values/strings.xml
+++ b/QuanLySinhVien/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">QuanLySinhVien</string>
+    <array name="lop">
+        <item>C++</item>
+        <item>Android</item>
+        <item>PHP</item>
+        <item>C#</item>
+    </array>
 </resources>
